--- a/Ejercitacion_MercadoLiebre/views/home.html
+++ b/Ejercitacion_MercadoLiebre/views/home.html
@@ -52,7 +52,7 @@
             <div class="burger-menu">
                 <i class="fas fa-bars"></i>
             </div>  
-            <div>   
+            <div class="banner">   
                 <img src="/images/img-home-banner.jpg" 
                      alt="Banner"
                      width="100%"/>
