--- a/Ejercitacion_MercadoLiebre/views/login.html
+++ b/Ejercitacion_MercadoLiebre/views/login.html
@@ -9,7 +9,6 @@
         
         <link rel="stylesheet" href="/css/normalize.css" type="text/css"/>
         <link rel="stylesheet" href="/css/styles.css" type="text/css"/>
-    
     </head> 
     
     <header>
@@ -51,7 +50,7 @@
         <div class="burger-menu">
             <i class="fas fa-bars"></i>
         </div>  
-        <div>   
+        <div class="banner">   
             <img src="/images/img-home-banner.jpg" 
                  alt="Banner"
                  width="100%"/>
