cambios de section class=copyright

--- a/MercadoLiebre_solution_day_5/solution_day_5/views/home.html
+++ b/MercadoLiebre_solution_day_5/solution_day_5/views/home.html
@@ -126,7 +126,7 @@
         </main>
         <footer>
             <section>
-                <section>
+                <section> 
                     <div class="icons">
                         <i class="fas fa-credit-card"></i>
                     </div>
@@ -158,7 +158,7 @@
                 </section>
             </section>
 
-            <section>
+            <section class="copyright">
                 <p>Copyright &#169 1999-2020 MercadoLiebre S.R.L.</p>
             </section>
         </footer>
