--- a/Ejercitacion_MercadoLiebre/public/css/styles.css
+++ b/Ejercitacion_MercadoLiebre/public/css/styles.css
@@ -266,8 +266,21 @@ body.register form{
 body.register form div{
     padding-top: 5px;
 }
-
-
+/* Estilos para login */
+body.login h2{ padding-top: 7vh;}
+body.login{
+    width:100%;
+    background-color: #ebebeb;
+    text-align: center;
+}
+body.login form{
+    font-size:10px;
+    padding:5px;
+    padding-bottom:15px;
+}
+body.login form div{
+    padding-top: 5px;
+}
 
  
 
@@ -306,6 +319,9 @@ body.register form div{
     body.register form{
         font-size:25px;
     }
+    body.login form{
+        font-size:25px;
+    }
 }
 
 /*any laptop to desktop*/
@@ -332,4 +348,5 @@ body.register form div{
     footer section section .icons:hover{ color: #39b54a;}
     footer section section .titular{font-size:2vw;}
     body.register form{   font-size:2vw;}
+    body.login form{   font-size:2vw;}
 }
