--- a/Ejercitacion_MercadoLiebre/views/login.html
+++ b/Ejercitacion_MercadoLiebre/views/login.html
@@ -74,7 +74,46 @@
             </div>
             
         </form>
+        <footer>
+            <section>
+                <section>
+                    <div class="icons">
+                        <i class="fas fa-credit-card"></i>
+                    </div>
+                    <h2 class="titular">Pago con tarjeta o en efectivo</h2>
+                    <p class="textofooter">
+                        Con Mercado Liebre Cash, tenés cuotas sin interés con tarjeta 
+                        o efectivo en puntos de pago. ¡Y siempre es seguro!
+                    </p>
+                </section>
+                <section>
+                    <div class="icons">
+                        <i class="fas fa-gift"></i>
+                    </div>
+                    <h2 class="titular">Envio gratis desde $ 2.500</h2>
+                    <p class="textofooter">
+                        Solo por estar registrad@ en Mercado Liebre tenés envíos 
+                        gratis en miles de productos. Es un beneficio de Mercado Puntos.
+                    </p>
+                </section>
+                <section>
+                    <div class="icons">
+                        <i class="fas fa-user-shield"></i>
+                    </div>
+                    <h2 class="titular">Seguridad, de principio a fin</h2>
+                    <p class="textofooter">
+                        ¿No te gusta?¡Devolvelo! En Mercado Liebre, no hay nada que
+                        no puedas hacer, porque estás siempre protegid@.
+                    </p>
+                </section>
+            </section>
+
+            <section> 
+                <p>Copyright &#169 1999-2020 MercadoLiebre S.R.L.</p>
+            </section>
+        </footer>
     </body>  
+    
     <script>
         let campoNombre=document.getElementById("campoNombre")
 
