--- a/Ejercitacion_MercadoLiebre/views/register.html
+++ b/Ejercitacion_MercadoLiebre/views/register.html
@@ -11,117 +11,115 @@
         <link rel="stylesheet" href="/css/styles.css" type="text/css"/>
     
     </head> 
-    
-    <header>
-        <div id="logo-search">
-            <div id="logo">
-                <img
-                  src="/images/logo-mercado-liebre.svg"
-                  alt="Mercado Liebre"
-                />
-            </div>
-            <div class ="form" method="GET">
-                <input  type="text"
-                        placeholder="Buscar productos, marcas y más">
-                </input>
-                <div class="submit" id="button" >
-                    <i class="fas fa-search-dollar"></i>
+    <body>
+        <header>
+            <div id="logo-search">
+                <div id="logo">
+                    <img
+                      src="/images/logo-mercado-liebre.svg"
+                      alt="Mercado Liebre"
+                    />
                 </div>
+                <div class ="form" method="GET">
+                    <input  type="text"
+                            placeholder="Buscar productos, marcas y más">
+                    </input>
+                    <div class="submit" id="button" >
+                        <i class="fas fa-search-dollar"></i>
+                    </div>
+                </div>
+                <div id="credito">
+                    <p><i class="fas fa-hand-holding-usd"></i> Compra en cuotas y sin tarjeta de credito</p>
+                </div>
+            </div>    
+            <div class="enlaces">
+                <ul type="none" >
+                    <li><a href="" >Ofertas</a></li>
+                    <li><a href="" >Tiendas Oficiales</a></li>
+                    <li><a href="" >Vender</a></li>
+                    <li><a href="" >Ayuda</a></li>
+                </ul>
+                <ul type="none" >
+                    <li><a href="/register" >Crea tu cuenta <i class="fas fa-id-card-alt"></i></a></li>
+                    <li><a href="/login" >Ingresa <i class="fas fa-arrow-circle-right"></i></i></a></li>
+                    <li><a href="" >Mas compras <i class="fas fa-cart-arrow-down"></i></a></li>
+                </ul>
             </div>
-            <div id="credito">
-                <p><i class="fas fa-hand-holding-usd"></i> Compra en cuotas y sin tarjeta de credito</p>
+            <div class="burger-menu">
+                <i class="fas fa-bars"></i>
+            </div>  
+            <div class="banner">   
+                <img src="/images/img-home-banner.jpg" 
+                     alt="Banner"
+                     width="100%"/>
             </div>
-        </div>    
-
-        <div class="enlaces">
-            <ul type="none" >
-                <li><a href="" >Ofertas</a></li>
-                <li><a href="" >Tiendas Oficiales</a></li>
-                <li><a href="" >Vender</a></li>
-                <li><a href="" >Ayuda</a></li>
-            </ul>
-
-            <ul type="none" >
-                <li><a href="/register" >Crea tu cuenta <i class="fas fa-id-card-alt"></i></a></li>
-                <li><a href="/login" >Ingresa <i class="fas fa-arrow-circle-right"></i></i></a></li>
-                <li><a href="" >Mas compras <i class="fas fa-cart-arrow-down"></i></a></li>
-            </ul>
-        </div>
-        
-        <div class="burger-menu">
-            <i class="fas fa-bars"></i>
-        </div>  
-        <div class="banner">   
-            <img src="/images/img-home-banner.jpg" 
-                 alt="Banner"
-                 width="100%"/>
-        </div>
-    </header>
-    <body class="register">
-        <h2 >Registro de usuario nuevo</h2>
-        <form action="/register" method="POST">
-            <div>
-                <label for="Nombre">Nombre:</label>
-                <input type="text" name="Nombre" 
-                        placeholder="Nombre y apellido"/>
-            </div>
-            <div>
-                <label for="NombreUsuario">Nombre de usuario:</label>
-                <input type="text" name="NombreUsuario"  
-                        placeholder="Nombre de usuario@"/>
-            </div>
-            <div>
-                <label for="Nacimiento">Fecha de nacimiento:</label>
-                <input type="date" name="Nacimiento"  value="AAAA-MM-DD"/>
-            </div>
-            <div>
-                <label for="Domicilio">Domicilio: </label>
-                <input type="textarea" name="Domicilio" 
-                       placeholder="Domicilio"/>
-            </div>
-            <div>
-                <label for="TipoUsuario">Tipo de perfil:</label>
-                <select name="TipoUsuario" placeholder="Perfil" id="TipoUsuario">
-                    <option value="Vender">Vender</option>
-                    <option value="Comprar" selected>Comprar</option>
-            </select>
-            </div>
-            <div class="CuadriculaCategorias">
-                <label for="Interes">Categorias de interés:</label>
-                <br>
-                <input type="checkbox" name="interes" value="electro" id=electro/>
-                <label for =electro>Electro</label>
-                <br>
-                <input type="checkbox" name="interes" value="moda" id=moda/>
-                <label for =moda>Moda</label>
-                <br>
-                <input type="checkbox" name="interes" value="hogar" id=hogar/>
-                <label for =hogar> Hogar</label>
-                <br>
-                <input type="checkbox" name="interes" value="jugeteria" id=jugeteria/>
-                <label for =jugueteria> Jugueteria</label>
-                <br>
-                <input type="checkbox" name="interes" value="vidaSana" id=vidaSana/>
-                <label for =vidaSana>Vida sana</label>
-            </div>
-            <div>
-                <label for =userImage>Imagen del usuario:</label>
-                <br>
-                <input type="file" name="userImage" accept=".jpg">
-            </div>
-            <div>
-                <label>Contraseña: </label>
-                <input type="password" name=password  min=10 required> 
-            </div>
-            <div>
-                <label>Confirma tu contraseña: </label>
-                <input type="password" name=confirm required >
-            </div>
-            <div>
-                <input type="reset" value="Vaciar"></input>
-                <input type="submit" value="Enviar"></input> 
-            </div>
-        </form>
+        </header>
+        <main class="register">
+            <h2 >Registro de usuario nuevo</h2>
+            <form action="/register" method="POST">
+                <div>
+                    <label for="Nombre">Nombre:</label>
+                    <input type="text" name="Nombre" 
+                            placeholder="Nombre y apellido"/>
+                </div>
+                <div>
+                    <label for="NombreUsuario">Nombre de usuario:</label>
+                    <input type="text" name="NombreUsuario"  
+                            placeholder="Nombre de usuario@"/>
+                </div>
+                <div>
+                    <label for="Nacimiento">Fecha de nacimiento:</label>
+                    <input type="date" name="Nacimiento"  value="AAAA-MM-DD"/>
+                </div>
+                <div>
+                    <label for="Domicilio">Domicilio: </label>
+                    <input type="textarea" name="Domicilio" 
+                           placeholder="Domicilio"/>
+                </div>
+                <div>
+                    <label for="TipoUsuario">Tipo de perfil:</label>
+                    <select name="TipoUsuario" placeholder="Perfil" id="TipoUsuario">
+                        <option value="Vender">Vender</option>
+                        <option value="Comprar" selected>Comprar</option>
+                </select>
+                </div>
+                <div class="CuadriculaCategorias">
+                    <label for="Interes">Categorias de interés:</label>
+                    <br>
+                    <input type="checkbox" name="interes" value="electro" id=electro/>
+                    <label for =electro>Electro</label>
+                    <br>
+                    <input type="checkbox" name="interes" value="moda" id=moda/>
+                    <label for =moda>Moda</label>
+                    <br>
+                    <input type="checkbox" name="interes" value="hogar" id=hogar/>
+                    <label for =hogar> Hogar</label>
+                    <br>
+                    <input type="checkbox" name="interes" value="jugeteria" id=jugeteria/>
+                    <label for =jugueteria> Jugueteria</label>
+                    <br>
+                    <input type="checkbox" name="interes" value="vidaSana" id=vidaSana/>
+                    <label for =vidaSana>Vida sana</label>
+                </div>
+                <div>
+                    <label for =userImage>Imagen del usuario:</label>
+                    <br>
+                    <input type="file" name="userImage" accept=".jpg">
+                </div>
+                <div>
+                    <label>Contraseña: </label>
+                    <input type="password" name=password  min=10 required> 
+                </div>
+                <div>
+                    <label>Confirma tu contraseña: </label>
+                    <input type="password" name=confirm required >
+                </div>
+                <div>
+                    <input type="reset" value="Vaciar"></input>
+                    <input type="submit" value="Enviar"></input> 
+                </div>
+            </form>
+        </main>
         <footer>
             <section>
                 <section>
@@ -160,6 +158,5 @@
                 <p>Copyright &#169 1999-2020 MercadoLiebre S.R.L.</p>
             </section>
         </footer>
-    </body> 
-       
+    </body>   
 </html>
