--- a/Ejercitacion_MercadoLiebre/views/login.html
+++ b/Ejercitacion_MercadoLiebre/views/login.html
@@ -10,70 +10,71 @@
         <link rel="stylesheet" href="/css/normalize.css" type="text/css"/>
         <link rel="stylesheet" href="/css/styles.css" type="text/css"/>
     </head> 
-    
-    <header>
-        <div id="logo-search">
-            <div id="logo">
-                <img
-                  src="/images/logo-mercado-liebre.svg"
-                  alt="Mercado Liebre"
-                />
-            </div>
-            <div class ="form" method="GET">
-                <input  type="text"
-                        placeholder="Buscar productos, marcas y más">
-                </input>
-                <div class="submit" id="button" >
-                    <i class="fas fa-search-dollar"></i>
+    <body>
+        <header>
+            <div id="logo-search">
+                <div id="logo">
+                    <img
+                      src="/images/logo-mercado-liebre.svg"
+                      alt="Mercado Liebre"
+                    />
                 </div>
-            </div>
-            <div id="credito">
-                <p><i class="fas fa-hand-holding-usd"></i> Compra en cuotas y sin tarjeta de credito</p>
-            </div>
-        </div>    
-
-        <div class="enlaces">
-            <ul type="none" >
-                <li><a href="" >Ofertas</a></li>
-                <li><a href="" >Tiendas Oficiales</a></li>
-                <li><a href="" >Vender</a></li>
-                <li><a href="" >Ayuda</a></li>
-            </ul>
-
-            <ul type="none" >
-                <li><a href="/register" >Crea tu cuenta <i class="fas fa-id-card-alt"></i></a></li>
-                <li><a href="/login" >Ingresa <i class="fas fa-arrow-circle-right"></i></i></a></li>
-                <li><a href="" >Mas compras <i class="fas fa-cart-arrow-down"></i></a></li>
-            </ul>
-        </div>
-        
-        <div class="burger-menu">
-            <i class="fas fa-bars"></i>
-        </div>  
-        <div class="banner">   
-            <img src="/images/img-home-banner.jpg" 
-                 alt="Banner"
-                 width="100%"/>
-        </div>
-    </header>
-    <body class="login">
-        <h2 >Ingrese sus datos de usuario</h2>
-        <form action="/login" method="POST">
-            <div>
-                <label for="Nombre">Login</label>
-                <input type="text" name="NombreDeUsuario" 
-                       id="campoNombre"  placeholder="Nombre de usuario@" />    
-            </div>
-            <div>
-                <label>Contraseña</label>
-                <input type="password" name = password >
-            </div>
-            <div>
-                <input type="submit" value="Enviar" 
-                       onclick="validar(event)"></input>
+                <div class ="form" method="GET">
+                    <input  type="text"
+                            placeholder="Buscar productos, marcas y más">
+                    </input>
+                    <div class="submit" id="button" >
+                        <i class="fas fa-search-dollar"></i>
+                    </div>
+                </div>
+                <div id="credito">
+                    <p><i class="fas fa-hand-holding-usd"></i> Compra en cuotas y sin tarjeta de credito</p>
+                </div>
+            </div>    
+    
+            <div class="enlaces">
+                <ul type="none" >
+                    <li><a href="" >Ofertas</a></li>
+                    <li><a href="" >Tiendas Oficiales</a></li>
+                    <li><a href="" >Vender</a></li>
+                    <li><a href="" >Ayuda</a></li>
+                </ul>
+    
+                <ul type="none" >
+                    <li><a href="/register" >Crea tu cuenta <i class="fas fa-id-card-alt"></i></a></li>
+                    <li><a href="/login" >Ingresa <i class="fas fa-arrow-circle-right"></i></i></a></li>
+                    <li><a href="" >Mas compras <i class="fas fa-cart-arrow-down"></i></a></li>
+                </ul>
             </div>
             
-        </form>
+            <div class="burger-menu">
+                <i class="fas fa-bars"></i>
+            </div>  
+            <div class="banner">   
+                <img src="/images/img-home-banner.jpg" 
+                     alt="Banner"
+                     width="100%"/>
+            </div>
+        </header>
+        <main class="login">
+            <h2 >Ingrese sus datos de usuario</h2>
+            <form action="/login" method="POST">
+                <div>
+                    <label for="Nombre">Login</label>
+                    <input type="text" name="NombreDeUsuario" 
+                           id="campoNombre"  placeholder="Nombre de usuario@" />    
+                </div>
+                <div>
+                    <label>Contraseña</label>
+                    <input type="password" name = password >
+                </div>
+                <div>
+                    <input type="submit" value="Enviar" 
+                           onclick="validar(event)"></input>
+                </div>
+                
+            </form>
+        </main>
         <footer>
             <section>
                 <section>
@@ -113,7 +114,6 @@
             </section>
         </footer>
     </body>  
-    
     <script>
         let campoNombre=document.getElementById("campoNombre")
 
